--- a/README.org
+++ b/README.org
@@ -14,6 +14,8 @@ External:
    | Version |   Released | 
    |   1.0.0 | 2012-01-27 | 
    |   1.0.1 | 2012-01-27 | 
+   |   1.0.2 | 2014-01-26 |
+   |   1.1.0 |        WIP |
 
   
 ** Usage
@@ -39,7 +41,7 @@ External:
 with leinigen
 
 #+BEGIN_SRC clojure
-[cmbntr/cmbntr.args "1.0.1"]
+[cmbntr/cmbntr.args "1.1.0-SNAPSHOT"]
 #+END_SRC
 
 with maven
@@ -48,7 +50,7 @@ with maven
 <dependency>
   <groupId>cmbntr</groupId>
   <artifactId>cmbntr.args</artifactId>
-  <version>1.0.1</version>
+  <version>1.1.0-SNAPSHOT</version>
 </dependency>
 #+END_SRC
 
